--- a/src/app/components/maestro/maestro.component.html
+++ b/src/app/components/maestro/maestro.component.html
@@ -24,7 +24,7 @@
         conocer la mejor propuesta de 0 a 100; atento a la vanguardia de innovación en el sector asegurador
     </div>
 </div>
-<div class="row" style="justify-content: center" id="Lideres">
+<div class="row" style="justify-content: center; max-width: 100%;" id="Lideres">
     <h2 style="width: 100%; text-align: center; color:#0b3259; margin: 70px;">
         NUESTROS LIDERES
     </h2>
