--- a/src/app/components/propiedades/propiedades.component.html
+++ b/src/app/components/propiedades/propiedades.component.html
@@ -9,30 +9,31 @@
     </div>
     <div class="modal-body">
         <section>
-            <div class="row" style="color: #ec2c01; width: 100%;">
+            <div class="row" style=" width: 100%;">
                 <div class="col-4">
                     <img src="{{propiedadesAseguradora.imagen}}" alt="" width="228px" height="110px">
                 </div>
-                <div class="col-4" style="color: #41a02c;  font-size: 1.4em; text-align: center;">
-                    COTIZACION COPROPIEDADES
+                <div class="col-4" style="font-size: 1.4em; text-align: center;" [ngStyle]="{'color': propiedadesAseguradora.color}">
+                    COTIZACIÓN COPROPIEDADES											
+												
                 </div>
-                <div class="col-4" style="color: #41a02c; text-align: right; font-size: 1.5em;">
-                    PYME
+                <div class="col-4" style="text-align: right; font-size: 1.5em;" [ngStyle]="{'color': propiedadesAseguradora.color}">
+                    Copropiedad
                 </div>
             </div>
 
             <!-- Datos de cliente  INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <app-datos-cliente (envioDatosCliente)="updateFormGroup($event, 'datosCliente')"></app-datos-cliente>
+            <app-datos-cliente (envioDatosCliente)="updateFormGroup($event, 'datosCliente')" [propiedadesAseguradora]="propiedadesAseguradora"></app-datos-cliente>
 
             <!-- Datos de Riesgo -->
-            <app-datos-riesgo (envioDatosRiesgo)="updateFormGroup($event, 'datosRiesgo')"></app-datos-riesgo>
+            <app-datos-riesgo (envioDatosRiesgo)="updateFormGroup($event, 'datosRiesgo')" [propiedadesAseguradora]="propiedadesAseguradora"></app-datos-riesgo>
 
             <!-- Relacion de bienes INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
             <div class="form-relacion-bienes" [formGroup]="aseguradoraFormGroup.controls.bienesYValores">
                 <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-4" style="color: #41a02c;">Relacion de bienes</div>
-                    <div class="col-4" style="color: #41a02c;">Valores asegurados</div>
-                    <hr style="width: 98%; background: #41a02c; margin: auto;">
+                    <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Relacion de bienes</div>
+                    <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Valores asegurados</div>
+                    <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
                     <div class="row list-items" *ngFor=" let item of bienesYValores">
                         <div class="col-4">{{item.nombre}}</div>
                         <div class="col-4">
@@ -47,29 +48,36 @@
                     </div>
                 </div>
             </div>
-            <!-- Amparos INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <div class="form-relacion-bienes" [formGroup]="aseguradoraFormGroup.controls.amparos">
-                <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-12" style="color: #41a02c;">Amparos</div>
-                    <hr style="width: 98%; background: #41a02c; margin: auto;">
-                    <div class="row" style="min-width: 45%; max-width: 45%; margin: 0.5%;"
-                        *ngFor=" let item of amparos">
-                        <div class="col-3" style="min-width: 50%;" [ngClass]="item.important ? 'bolder': ''">
-                            {{item.nombre}}
-                        </div>
-                        <div class="col-3" style="min-width: 50%;">
-                            <input type="text" class="form-control" formControlName="{{item.idFormulario}}"
-                                ngbTooltip="Valor minimo (1)" placement="right" ngDefaultControl />
-                            <span
-                                *ngIf="controlFormularioAmparos.controls[item.idFormulario].hasError('required') || controlFormularioAmparos.controls[item.idFormulario].hasError('min') && (controlFormularioAmparos.controls[item.idFormulario].dirty || controlFormularioAmparos.controls[item.idFormulario].touched)"
-                                class="text-danger">
-                                * Campo requerido
-                            </span>
-                        </div>
-                    </div>
+           
+
+            <!-- clausulas PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Clausulas adicionales: </div>
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
+                <div class="row list-items" *ngFor=" let item of asistenciaClausulas">
+                    <div class="col-8" style="text-align: left; margin-left: 20px;">{{item.valor}}</div>
                 </div>
             </div>
-            <div class="row">
+             <!-- Asistencia PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Asistencia a Copropiedad		</div>
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
+                <div class="row list-items" *ngFor=" let item of asistenciaPropiedad">
+                    <div class="col-4" [ngClass]="item.important ? 'bolder': ''">{{item.nombre}}</div>
+                    <div class="col-4" style="text-align: left">{{item.valor}}</div>
+                </div>
+            </div>
+
+             <!-- Asistencia Privada PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+             <div class="row" style="margin-bottom: 10px;">
+                <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Asistencia a Areas privadas</div>
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
+                <div class="row list-items" *ngFor=" let item of asistenciaPrivadaPropiedad">
+                    <div class="col-4" style="text-align: center">{{item.valor}}</div>
+                </div>
+            </div>
+
+            <!-- <div class="row">
                 <div class="col-3 bolder">
                     Total valor asegurado
                 </div>
@@ -77,55 +85,38 @@
                     {{totalValorAsegurado}}
                 </div>
 
-            </div>
+            </div> -->
 
-            <!-- Asistencia PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-4" style="color: #41a02c;">Asistencia PYME</div>
-                <hr style="width: 98%; background: #41a02c; margin: auto;">
-                <div class="row list-items" *ngFor=" let item of asistenciaPymes">
-                    <div class="col-4" [ngClass]="item.important ? 'bolder': ''">{{item.nombre}}</div>
-                    <div class="col-4" style="text-align: left">{{item.valor}}</div>
-                </div>
-            </div>
+           
             <!-- deducibles PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-4" style="color: #41a02c;">Deducibles</div>
-                <hr style="width: 98%; background: #41a02c; margin: auto;">
+            <!-- <div class="row" style="margin-bottom: 10px;">
+                <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Deducibles</div>
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
                 <div class="row list-items" *ngFor=" let item of asistenciaDeducibles">
                     <div class="col-4" [ngClass]="item.important ? 'bolder': ''">{{item.nombre}}</div>
                     <div class="col-8" style="text-align: left">{{item.valor}}</div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Totales  -->
-            <div class="col-4" style="color: #41a02c;">Totales</div>
-            <hr style="width: 98%; background: #41a02c; margin: auto;">
+            <!-- <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Totales</div>
+            <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
             <div class="row" style="margin-bottom: 20px;">
                 <div class="col-2"> Prima Anual:</div>
                 <div class="col-2">
                     {{ prima }}
                 </div>
                 <div class="col-2"> Iva:</div>
-                <div class="col-2">
+                <div class="col-2"> {{ iva }}
                 </div>
                 <div class="col-2"> Total:</div>
-                <div class="col-2">
+                <div class="col-2"> {{ totalAnual }}
                 </div>
-            </div>
-
-            <!-- clausulas PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-4" style="color: #41a02c;">Clausulas adicionales: </div>
-                <hr style="width: 98%; background: #41a02c; margin: auto;">
-                <div class="row list-items" *ngFor=" let item of asistenciaClausulas">
-                    <div class="col-8" style="text-align: left; margin-left: 20px;">{{item.valor}}</div>
-                </div>
-            </div>
-            <!-- clausulas PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-4" style="color: #41a02c;">Observaciones: </div>
-                <hr style="width: 98%; background: #41a02c; margin: auto;">
+            </div> -->
+            <!-- observaciones PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+            <!-- <div class="row" style="margin-bottom: 10px;">
+                <div class="col-4" [ngStyle]="{'color': propiedadesAseguradora.color}">Observaciones: </div>
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
                 <div class="row" style="justify-content: center; width: 100%; margin-top: 20px; margin-bottom: 20px">
                     <div class="col-10">
                         <textarea type="text" formControlName="observacion" class="form-control"
@@ -133,7 +124,7 @@
                     </div>
                 </div>
 
-                <hr style="width: 98%; background: #41a02c; margin: auto;">
+                <hr style="width: 98%;margin: auto;" [ngStyle]="{'background': propiedadesAseguradora.color}">
                 <div class="row" style="justify-content: center; width: 100%; margin-top: 20px; margin-bottom: 20px">
                     <div class="col-10" style="text-align: center;">
                         TODAS LAS CONDICIONES DE ESTA COTIZACION SE RIGEN POR EL CONDICIONADO GENERAL FORMA 05/05/2015-1501-P-07-0000000000000002803, LA EXPEDICION DE LA POLIZA ESTA CONDICIONADA AL CUMPLIMIENTO DE LOS REQUISITOS DE ASEGURABILIDAD EXIGIDOS POR LA EQUIDAD SEGUROS O.C.
@@ -142,7 +133,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
     </div>
     <div class="modal-footer">
